MDEV-37939 Add function context to division by zero warnings