sql/item_func.h
@@ -251,6 +251,7 @@ public:
   String *val_str_from_val_str_ascii(String *str, String *str2);
 
   void signal_divide_by_null();
+  void signal_divide_by_null(const char *context);
   friend class udf_handler;
   Field *create_field_for_create_select(MEM_ROOT *root, TABLE *table) override
   { return tmp_table_field_from_field_type(root, table); }
